fix: fix bundler setup

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -761,7 +761,7 @@ h1 {
 ////////////////////////////////////////////////////////////////
 
 .header-cas-client {
-  background-image: url("../img/img-header-hubavocat.png");
+  background-image: url("../../public/img/img-header-hubavocat.png");
   background-size: cover;
   height: 100vh;
 
@@ -1106,7 +1106,7 @@ img.img-projet {
 ////////////////////////////////////////////////////////////////
 
 .cas-client-next-semji {
-  background-image: url("../img/img-header-semji.png");
+  background-image: url("../../public/img/img-header-semji.png");
   background-size: cover;
   border-bottom: solid 0.5px $g__c_white;
 
