--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -6,7 +6,7 @@
 
 ////////////////////////////////////////////////////////////////
 //
-//  BOOTSTRAP 
+//  BOOTSTRAP
 //
 ////////////////////////////////////////////////////////////////
 
@@ -14,33 +14,32 @@
 // https://getbootstrap.com/docs/5.1/customize/sass/
 
 // ALL
-// @import "../node_modules/bootstrap/scss/bootstrap";
+// @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // CUSTOM INCLUDES
 
 // FUNCTIONS
-@import "../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/functions";
 
 // CUSTOM OVERRIDES
 @import "./custom-bootstrap.scss";
 
-
 // STYLESHEETS
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
-@import "../node_modules/bootstrap/scss/root";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/root";
 
 // OPTIONAL CSS
-// @import "../node_modules/bootstrap/scss/utilities";
-// @import "../node_modules/bootstrap/scss/reboot";
-// @import "../node_modules/bootstrap/scss/type";
-// @import "../node_modules/bootstrap/scss/images";
-@import "../node_modules/bootstrap/scss/containers";
-@import "../node_modules/bootstrap/scss/grid";
-// @import "../node_modules/bootstrap/scss/helpers";
+// @import "../../node_modules/bootstrap/scss/utilities";
+// @import "../../node_modules/bootstrap/scss/reboot";
+// @import "../../node_modules/bootstrap/scss/type";
+// @import "../../node_modules/bootstrap/scss/images";
+@import "../../node_modules/bootstrap/scss/containers";
+@import "../../node_modules/bootstrap/scss/grid";
+// @import "../../node_modules/bootstrap/scss/helpers";
 
 // UTILITIES API (SASS)
-// @import "../node_modules/bootstrap/scss/utilities/api";
+// @import "../../node_modules/bootstrap/scss/utilities/api";
 
 ////////////////////////////////////////////////////////////////
 //
