chore: remove useless comments

--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,11 +1,5 @@
 ////////////////////////////////////////////////////////////////
 //
-//  ©PRAKT
-//
-////////////////////////////////////////////////////////////////
-
-////////////////////////////////////////////////////////////////
-//
 //  VARS
 //
 ////////////////////////////////////////////////////////////////
@@ -24,10 +18,10 @@ $g__global_context: 1920px;
 //
 ////////////////////////////////////////////////////////////////
 
-$g__global_fontfamily: 'Poppins';
+$g__global_fontfamily: "Poppins";
 $g__global_fontsize: 20px;
 $g__global_lineheight: 38px;
-$g__global_fontfamily_title: 'GT-Super';
+$g__global_fontfamily_title: "GT-Super";
 
 ////////////////////////////////////////////////////////////////
 //
@@ -44,6 +38,6 @@ $g__z_base: 100;
 ////////////////////////////////////////////////////////////////
 
 $g__c_color: #000;
-$g__c_dark: #151B31;
-$g__c_pink: #FAEDE9;
+$g__c_dark: #151b31;
+$g__c_pink: #faede9;
 $g__c_white: #fff;
