--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -337,6 +337,7 @@ h1 {
       opacity: 1;
       display: flex;
       padding-right: 30px;
+      cursor: pointer;
 
       @media screen and (min-width: $g__resp_sm) {
         padding-right: 50px;
@@ -419,6 +420,13 @@ h1 {
     }
   }
 }
+
+
+////////////////////////////////////////////////////////////////
+// SLIDER CHAT GPT
+///////////////////////////////////////////////////////////////
+
+
 
 ////////////////////////////////////////////////////////////////
 //
