--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -336,8 +336,9 @@ h1 {
       letter-spacing: 0.03em;
       opacity: 1;
       display: flex;
-      padding-right: 30px;
+      padding-right: 20px;
       cursor: pointer;
+      font-size: 16px;
 
       @media screen and (min-width: $g__resp_sm) {
         padding-right: 50px;
@@ -368,7 +369,13 @@ h1 {
     position: relative;
     overflow: hidden;
     height: 100%;
+
+    @media screen and (min-width: $g__resp_sm) {
+      height: 100vh;
+    }
+
   }
+
 
   .slide {
     position: relative;
@@ -412,6 +419,7 @@ h1 {
   .img_slide {
     display: flex;
     justify-content: center;
+    max-height: 60vh;
 
     img {
       // max-width: 850px;
