--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -144,7 +144,7 @@ h1 {
       height:100%;
       opacity:0;
       visibility:hidden;
-      transition:all 0.3s ease-in-out;
+      transition:all 0.5s ease;
       
       ul {
         list-style-type:none;
@@ -152,23 +152,36 @@ h1 {
         margin:0;
         position:absolute;
         left:50%;
-        top:170px;
-        transition:all 0.3s ease-in-out;
+        transition:all 0.5s ease;
         transform:translateX(-50%);
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
       
         li {
           transform:translateY(50px);
           opacity:0;
+          width: auto;
+          display:flex;
+          justify-content: center;
+          margin-bottom: 20px;
+          transition:all 0.5s ease-in-out;
           
           a {
-            display:block;
+            
             font-size:2em;
             text-decoration:none;
             padding:10px 0;
             text-align:center;
             color:#fff;
-            transition:all 0.2s ease-in-out;
-            font-family: $g__global_fontfamily_title;
+            transition:all 0.5s ease-in-out;
+            color:$g__c_color;
+            width: auto;
+            display:flex;
+            justify-content: center;
             
 
             &::after{
@@ -178,13 +191,14 @@ h1 {
               height:0.2rem;
               width: 0%;
               bottom:-0.05em;
-              left:0;
+              left:0%;
               transition:0.5s all ease;
             }
       
             &:hover {
               &::after{
                 width:100%;
+
               }
           }
         }
@@ -230,7 +244,7 @@ h1 {
           @for $i from 1 through 4 {
               $t: $i * 0.1;
               &:nth-child(#{$i}) {
-                transition:all 0.3s cubic-bezier(.6,0,.8,1.5) #{$t}s; 
+                transition:all 0.3s cubic-bezier(.36,.29,.6,.86) #{$t}s; 
               }
             }
         }
@@ -563,10 +577,17 @@ h1 {
   .img_slide {
     display: flex;
     justify-content: center;
-    max-height: 60vh;
+  
+
+    &.prototypage {
+      margin-right: -30px;
+    }
+
+    &.test-utilisateur {
+      max-height: 60vh;
+    }
 
     img {
-      // max-width: 850px;
       display: block;
       width: 100%;
     }
@@ -618,9 +639,11 @@ h1 {
     font-size: 2em;
     color: $g__c_white;
     margin-bottom: 20px;
+    text-align: center;
 
     @media screen and (min-width: $g__resp_sm) {
       margin-bottom: 0px;
+      text-align: left;
     }
   }
 
@@ -632,6 +655,9 @@ h1 {
     padding-top: 50px;
     margin-bottom: 30px;
     justify-content: space-between;
+    position: absolute;
+    bottom: 20px;
+    width: 83%;
 
     @media screen and (min-width: $g__resp_sm) {
       display: flex;
@@ -640,6 +666,8 @@ h1 {
       min-width: 5em;
       padding-top: 10px;
       justify-content: space-between;
+      position: relative;
+      width: auto;
     }
   }
 
@@ -783,8 +811,8 @@ h1 {
 
     @media screen and (min-width: $g__resp_sm) {
       margin-left: 0px;
-      margin-top: -100px;
-      max-width: 550px;
+      margin-top: -50px;
+      max-width: 500px;
     }
     }
 
@@ -794,9 +822,9 @@ h1 {
     max-width: 250px;
 
     @media screen and (min-width: $g__resp_sm) {
-      margin-top: 220px;
+      margin-top: 100px;
       margin-left: -450px;
-      max-width: 550px;
+      max-width: 500px;
     }
     }
 
@@ -814,10 +842,12 @@ h1 {
     padding-right: 0em;
     margin-top: 25px;
     margin-bottom: 25px;
+    align-items: center;
 
     @media screen and (min-width: $g__resp_sm) {
       padding-right: 32%;
       margin-top: 0px;
+      align-items: flex-start;
     }
 
     p {
@@ -825,9 +855,11 @@ h1 {
       line-height: 1.7em;
       font-weight: 300;
       margin-bottom: 35px;
+      text-align: center;
 
       @media screen and (min-width: $g__resp_sm) {
         margin-bottom: 40px;
+        text-align: left;
       }
     }
 
@@ -836,8 +868,15 @@ h1 {
       border: solid 1px;
       border-radius: 50px;
       padding: 15px 30px;
-      align-self: flex-start;
+      align-self: center;
+
+      @media screen and (min-width: $g__resp_sm) {
+        align-self: flex-start;
+      }
+
     }
+
+
 
     .logo_cas_client {
       margin-bottom: 20px;
@@ -1234,16 +1273,23 @@ img.img-projet {
 
   img {
     width: 100%;
-  }
-
-  .img-x2-projet-2 {
-    margin-top: 5em;
-    margin-left: 2em;
 
     @media screen and (min-width: $g__resp_sm) {
-      margin-top: 10em;
-      margin-left: 4em;
+      width: 70%;
     }
+    
+  }
+    
+
+    .img-x2-projet-2 {
+      margin-top: 5em;
+      margin-left: 2em;
+  
+      @media screen and (min-width: $g__resp_sm) {
+        margin-top: 10em;
+        margin-left: -2em;
+      }
+
   }
 
   .title-2 {
