--- a/src/style/custom-bootstrap.scss
+++ b/src/style/custom-bootstrap.scss
@@ -15,5 +15,10 @@ $grid-gutter-width: 15px;
 .container-fluid {
   // width: 100% !important;
   // max-width: 100% !important;
-  padding: 1px 30px 0 30px !important;
+  padding: 1px 30px 0 40px !important;
+
+  @media screen and (min-width: 576px) {
+    padding: 1px 40px 0 40px !important;
+  }
+
 }
